--- a/src/main/resources/static/css/blogCard.css
+++ b/src/main/resources/static/css/blogCard.css
@@ -107,7 +107,7 @@
 	color: #000;
 }
 .btn:hover {
-    background-color: #e2e2e2;
+    background-color: #ece5da;
 	border-color: transparent;
     color: #000;
 }
