--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -5,6 +5,12 @@ body{
 }
 
 /* MAIN CONTAINER */
+header{
+	font-size: 50px;
+	font-weight: 700;
+	margin-left: 85px;
+	margin-bottom: 75px;
+}
 .userContainer {
    display: flex;
    align-items: center;
@@ -124,6 +130,7 @@ input, select {
 .radio-toolbar label {
 	display: inline-block;
 	text-align: center;
+	text-transform: uppercase;
 	padding: 10px 17px;
 	font-family: 'Nunito', sans-serif;
 	font-weight: bold;
@@ -153,14 +160,14 @@ input, select {
 	border: 2px solid #005f73ff;
 }
 .radio-toolbar label:hover {
-	background-color: #dfd;
+	background-color: #ece5da;
 }
 .radio-toolbar input[type="radio"]:focus + label{
-	border: 2px dashed #444;
+	border: 2px dashed rgb(176, 155, 120);
 }
 .radio-toolbar input[type="radio"]:checked + label {
-	background-color: #bfb;
-	border-color: #4c4;
+	background-color: #ece5da;
+	/* border-color: #4c4; */
 }
 .textarea-div {
 	width: 100%;
@@ -190,7 +197,7 @@ textarea {
 	transition: 0.3s all ease;
 }
 .submit-btn:hover {
-    background-color: #e2e2e2;
+    background-color: #ece5da;
 }
 @media screen and (min-width: 700px) {
 	.large-group {
@@ -231,6 +238,6 @@ textarea {
 	display: flex;
 	flex-direction: column;
 	overflow-y: auto;
-	max-height: 700px;
+	min-height: 700px;
 }
 
